API修正、初期データ追加
